--- a/Generate HOG images.ipynb
+++ b/Generate HOG images.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I found 1 faces in the file C:\\Users\\skhan\\Downloads\\Kropper_face.jpg\n",
-      "- Face #0 found at Left: 81 Top: 98 Right: 236 Bottom: 253\n"
+     "ename": "RuntimeError",
+     "evalue": "Unsupported image type, must be 8bit gray or RGB image.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-f2ba396a4d09>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;31m# Run the HOG face detector on the image data. The result will be the bounding boxes of the faces in our image.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mdetected_faces\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mface_detector\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"I found {} faces in the file {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdetected_faces\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Unsupported image type, must be 8bit gray or RGB image."
      ]
     }
    ],
@@ -20,7 +23,7 @@
     "from skimage import io\n",
     "\n",
     "# Take the image file name from the command line\n",
-    "file_name = 'C:\\\\Users\\\\skhan\\\\Downloads\\\\Kropper_face.jpg'\n",
+    "file_name = 'C:\\\\Users\\\\skhan\\\\Downloads\\\\1.png'\n",
     "\n",
     "# Create a HOG face detector using the built-in dlib class\n",
     "face_detector = dlib.get_frontal_face_detector()\n",
@@ -51,6 +54,15 @@
     "# Wait until the user hits <enter> to close the window\t        \n",
     "dlib.hit_enter_to_continue()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
